--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,15 @@ html {
   text-align: center;
 }
 
+.text{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  font-size: 40px;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+
 .clearfix {
   zoom: 1;
 }
